<resources>
    <string name="app_name">Movies</string>
    <string name="acc_poster_image">Movie Poster</string>
    <string name="base_url">http://api.themoviedb.org/3/</string>
    <string name="appwidget_text">FAV MOVIES</string>
    <string name="add_widget">Add widget</string>
    <string name="submit">Submit</string>
    <string name="no_duh">Duh No!</string>

    <!--Menu Entries-->
    <string name="action_popular">Popular</string>
    <string name="action_most_rated">Most Rated</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_feedback">Feedback</string>

    <!--content descriptions-->
    <string name="cd_email">Type your email here</string>
    <string name="cd_feedback">Type your Feedback here</string>
    <string name="cd_submit">Submit button</string>
    <string name="cd_share">Share button</string>
    <string name="cd_mark_favorite">Mark as favorite</string>

    <!--Snackbars-->
    <string name="sb_empty_fields">Kindly fill all values properly !</string>
    <string name="sb_submission_successful">Your feedback has been submited ! Thanks. Taking you back to Home.</string>
    <string name="sb_now_showing_popular">Now Showing Popular</string>;
    <string name="sb_now_showing_rated">Now Showing Most Rated</string>;
    <string name="sb_now_showing_favorites">Now Showing Favorites</string>;
    <string name="sb_no_favorites">Oh No, Seems like you haven\'t marked any movie as your favorite!</string>
    <string name="sb_saved_favorite">Saved as Favorite</string>
    <string name="sb_problem_saving_favorite">Something happened, please try again!</string>
    <string name="sb_removed_favorite">Removed from Favorites</string>
    <string name="sb_no_internet">No Internet Connection Available !</string>

    <!--intents-->
    <string name="i_share">"Hey checkout this movie, its awesome. Here\'s the link - https://www.themoviedb.org/movie/"</string>
</resources>
