<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.saeedmac.saeedcapstoneproject.ui.Feedback">

    <EditText
        android:id="@+id/feedback_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_feedback"
        android:hint="@string/cd_feedback" />

    <EditText
        android:id="@+id/feedback_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback_text"
        android:contentDescription="@string/cd_email"
        android:hint="@string/cd_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/feedback_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/feedback_email"
        android:layout_below="@id/feedback_email"
        android:contentDescription="@string/cd_submit"
        android:text="@string/submit"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

</RelativeLayout>
